Code tidy.  Split main to enable testing and code coverage